@@ -2,94 +2,77 @@ package com.sprint.mission.discodeit.repository.file;
 
 import com.sprint.mission.discodeit.entity.Message;
 import com.sprint.mission.discodeit.repository.MessageRepository;
+import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
+import org.springframework.stereotype.Repository;
 
 import java.io.*;
-import java.nio.file.*;
-import java.util.*;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.util.List;
+import java.util.Optional;
+import java.util.UUID;
+import java.util.stream.Collectors;
 
+@ConditionalOnProperty(name = "discodeit.repository.type", havingValue = "file")
+@Repository
 public class FileMessageRepository implements MessageRepository {
-    private final Path directory;
+    private final Path DIRECTORY;
+    private final String EXTENSION = ".ser";
 
-    public FileMessageRepository(Path directory) {
-        this.directory = directory;
-        initDirectory();
-    }
-
-    private void initDirectory() {
-        try {
-            if (!Files.exists(directory)) {
-                Files.createDirectories(directory);
+    public FileMessageRepository() {
+        this.DIRECTORY = Paths.get(System.getProperty("user.dir"), "file-data-map", Message.class.getSimpleName());
+        if (Files.notExists(DIRECTORY)) {
+            try {
+                Files.createDirectories(DIRECTORY);
+            } catch (IOException e) {
+                throw new RuntimeException(e);
             }
-        } catch (IOException e) {
-            throw new RuntimeException("디렉토리 생성 실패: ", e);
         }
     }
 
     private Path resolvePath(UUID id) {
-        return directory.resolve(id.toString().concat(".ser"));
-    }
-
-    private Message saveFile(Message message) {
-        try (
-                FileOutputStream fos = new FileOutputStream(resolvePath(message.getId()).toFile());
-                ObjectOutputStream oos = new ObjectOutputStream(fos)
-        ) {
-            oos.writeObject(message);
-            return message;
-        } catch (IOException e) {
-            throw new RuntimeException("메시지 저장 실패: " + e);
-        }
-    }
-
-    private Optional<Message> loadFile(UUID id) {
-        if (Files.exists(resolvePath(id))) {
-            try (
-                    FileInputStream fis = new FileInputStream(resolvePath(id).toFile());
-                    ObjectInputStream ois = new ObjectInputStream(fis)
-            ) {
-                return Optional.of((Message) ois.readObject());
-            } catch (IOException | ClassNotFoundException e) {
-                return Optional.empty();
-            }
-        } else {
-            return Optional.empty();
-        }
+        return DIRECTORY.resolve(id + EXTENSION);
     }
 
     @Override
     public Message save(Message message) {
-        return saveFile(message);
+        Path path = resolvePath(message.getId());
+        try (
+                FileOutputStream fos = new FileOutputStream(path.toFile());
+                ObjectOutputStream oos = new ObjectOutputStream(fos)
+        ) {
+            oos.writeObject(message);
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
+        return message;
     }
 
     @Override
     public Optional<Message> findById(UUID id) {
-        return loadFile(id);
+        Path path = resolvePath(id);
+        if (!Files.exists(path)) return Optional.empty();
+        try (
+                FileInputStream fis = new FileInputStream(path.toFile());
+                ObjectInputStream ois = new ObjectInputStream(fis)
+        ) {
+            return Optional.of((Message) ois.readObject());
+        } catch (IOException | ClassNotFoundException e) {
+            throw new RuntimeException(e);
+        }
     }
 
     @Override
-    public List<Message> findAll() {
-        if (Files.exists(directory)) {
-            try {
-                return Files.list(directory)
-                        .filter(path -> path.toString().endsWith(".ser"))
-                        .map(path -> {
-                            try (
-                                    FileInputStream fis = new FileInputStream(path.toFile());
-                                    ObjectInputStream ois = new ObjectInputStream(fis)
-                            ) {
-                                return (Message) ois.readObject();
-                            } catch (IOException | ClassNotFoundException e) {
-                                return null;
-                            }
-                        })
-                        .filter(Objects::nonNull)
-                        .toList();
-            } catch (IOException e) {
-                throw new RuntimeException("메시지 전체 조회 실패", e);
-            }
-        } else {
-            return new ArrayList<>();
-        }
+    public List<Message> findAllByChannelId(UUID channelId) {
+        return findAll().stream()
+                .filter(m -> m.getChannelId().equals(channelId))
+                .collect(Collectors.toList());
+    }
+
+    @Override
+    public boolean existsById(UUID id) {
+        return Files.exists(resolvePath(id));
     }
 
     @Override
@@ -97,7 +80,32 @@ public class FileMessageRepository implements MessageRepository {
         try {
             Files.deleteIfExists(resolvePath(id));
         } catch (IOException e) {
-            throw new RuntimeException("메시지 삭제 실패: " + id, e);
+            throw new RuntimeException(e);
+        }
+    }
+
+    @Override
+    public void deleteAllByChannelId(UUID channelId) {
+        findAllByChannelId(channelId).forEach(msg -> deleteById(msg.getId()));
+    }
+
+    private List<Message> findAll() {
+        try {
+            return Files.list(DIRECTORY)
+                    .filter(path -> path.toString().endsWith(EXTENSION))
+                    .map(path -> {
+                        try (
+                                FileInputStream fis = new FileInputStream(path.toFile());
+                                ObjectInputStream ois = new ObjectInputStream(fis)
+                        ) {
+                            return (Message) ois.readObject();
+                        } catch (IOException | ClassNotFoundException e) {
+                            throw new RuntimeException(e);
+                        }
+                    })
+                    .collect(Collectors.toList());
+        } catch (IOException e) {
+            throw new RuntimeException(e);
         }
     }
 }
